2006-05-05  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/plaf/basic/BasicTreeUI.java (paint): Return early
	if there are no visible nodes to paint.
	
2006-05-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* include/Makefile.am:
	Added rules for gnu.java.net.local.LocalSocketImpl.h
	* include/java_lang_VMSystem.h:
	Regenerated correctly.
	
2006-05-03  Sven de Marothy <sven@physto.se>
       
	PR 24023, 24701
	* java/awt/Image.java:
	(getScaledInstance): Default to AreaAveraging for "smooth", 
	don't thrown an error on illegal flag values.
	* java/awt/image/AreaAveragingScaleFilter.java: Implement.

2006-05-03  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/FieldView.java:
	(adjustAllocation): Added if-block to return null when shape argument
	is null.
	* javax/swing/text/PlainView.java:
	(updateDamage): Added if-block to return early if a is null.

2006-05-03  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/plaf/basic/BasicTextUI.java:
	(changeUpdate): Added note.
	(removeUpdate): Dito.
	(insertUpdate): Dito.
	(damageRange): Added if-block to return early.
	(modelToView): Added check of getVisibleEditorRect's return value.
	(getVisibleEditorRect): Return null instead of empty rectangle.
	* javax/swing/text/DefaultCaret.java:
	(clearHighlight): Removed if-clause to create a highlight entry if it
	did not exist before.
	* javax/swing/text/WrappedPlainView.java:
	(WrappedLine.modelToView): Throw exception if allocation area is empty,
	removed 2nd part of if-expression.
	(WrappedLine.updateDamage): Added more documentation, added check
	whether allocation area rectangle is null.

2006-05-03  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/JSplitPane.java (setDividerLocation(int)):
	Reset to preferred sizes if the argument is negative.

2006-05-03  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JList.java: Added/updated API docs.

2006-05-03  Lillian Angel  <langel@redhat.com>
